--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 <link rel="stylesheet" href="/css/space.css">
 <script
         src="https://code.jquery.com/jquery-3.5.1.min.js"
