--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -2,5 +2,10 @@
 <script src="/js/ship.js"></script>
 <script src="/js/enemy.js"></script>
 <script src="/js/factory.js"></script>
+<script>
+    <% if (currentUser) {%>
+        const playerName = '<%= currentUser.username %>';
+    <% } %>
+</script>
 <script src="/js/space.js"></script>
 <script src="app.js"></script>
