--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,46 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Sign Up</title>
-    <%- include('../partials/head.ejs') %>
-</head>
-<body>
-    <%- include('../partials/nav.ejs') %>
-    <div class="logs">
-        <% if(message != '') { %>
-            <div class="message">
-                <p><%= message%></p>
+<div class="logs">
+    <form id="new-user-form" action="/users" method="POST">
+        <fieldset>
+            <legend>Sign Up</legend>
+            <div class="field">
+                <label for="name">Username:</label>
+                <input id="name" type="text" name="username" required/>
             </div>
-        <% } %>
-        <form id="new-user-form" action="/users" method="POST">
-            <fieldset>
-                <legend>Sign Up</legend>
-                <div class="field">
-                    <label for="name">Username:</label>
-                    <input id="name" type="text" name="username" required/>
+            <div class="field">
+                <label for="password">Password:</label>
+                <input type="password" name="password" />
+            </div>
+            <div class="ship-data">
+                <div class="title">
+                    <p>Set ship attributes: (hull strength and firepower must add up to 10)</p>
                 </div>
                 <div class="field">
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" />
-                </div>
-                <div class="ship-data">
-                    <div class="title">
-                        <p>Set ship attributes: (hull strength and firepower must add up to 10)</p>
-                    </div>
-                    <div class="field">
-                        <label for="ship-hull">Ship Hull Strength (1-9):</label>
-                        <input type="text" name="ship-hull" id="ship-hull" />
-                    </div>
-                    <div class="field">
-                        <label for="ship-firepower">Ship Firepower (1-9):</label>
-                        <input type="text" name="ship-firepower" />
-                    </div>
+                    <label for="ship-hull">Ship Hull Strength (1-9):</label>
+                    <input type="text" name="ship-hull" id="ship-hull" />
                 </div>
                 <div class="field">
-                    <button id="new-user" type="submit">Submit</button>
+                    <label for="ship-firepower">Ship Firepower (1-9):</label>
+                    <input type="text" name="ship-firepower" />
                 </div>
-            </fieldset>
-        </form>
-    </div>
-</body>
-</html>
+            </div>
+            <div class="field">
+                <button id="new-user" type="submit">Submit</button>
+                <a class="button" href="/" id="back">Back</a>
+            </div>
+        </fieldset>
+    </form>
+</div>
