final final changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 <body>
 
 <% if(currentUser) { %>
-    <div class="modal">
+    <div class="modal main">
         <div class="title">
             <h1>SPACE BATTLE</h1>
             <p>Welcome, <%= currentUser.username %></p>
@@ -21,7 +21,7 @@
         </div>
     </div>
 <% } else { %>
-    <div class="modal">
+    <div class="modal main">
         <div class="title">
             <h1>SPACE BATTLE</h1>
             <p>Login/Signup</p>
