--- a/views/ships/edit.ejs
+++ b/views/ships/edit.ejs
@@ -5,7 +5,8 @@
             <legend>Edit your ship</legend>
             <div class="ship-data">
                 <div class="title">
-                    <p>Set ship attributes: (hull strength and firepower must add up to 10)</p>
+                    <p style="margin-bottom: 0px; margin-top: 25px;">Ship level: <%= ship.level %></p>
+                    <p style="margin-bottom: 15px; font-weight: bold;">Set ship attributes: (hull strength and firepower must add up to 10)</p>
                 </div>
                 <div class="field">
                     <label for="ship-hull">Ship Hull Strength (1-9):</label>
